# airflow_astro

./: .gitignore  pyproject.toml  requirements.txt  test_news_api.ipynb  to_parquet.py
.astro/: config.yaml
dags/: activate_airyte.py  airbnb_dbt_task_group.py  astro_sdk.py  dag_glue_crawler.py  dag_holiday.py  example_dag_basic.py  fetch_news_data.py  json_to_postgres.py  levi_dag copy.py  levi_dag.py  listings.py  news_api_dag.py  news_api_dbt.py  news_api_dbt_task_group.py  scraper_filmes.py  scraper_insert_postgres.py  tentar_ler_pandas.py  test_database_render.py
dags/dbt/news_api/: dbt_project.yml
dags/dbt/news_api/models/: sources.yml
dags/dbt/news_api/models/mart/: keyword_date.sql  news_author.sql  news_per_day.sql
dags/dbt/news_api/models/staging/: stg_news.sql
dags/filmes/: filmes.json  run_scraper.py
dags/filmes/filmes/: settings.py
dags/filmes/filmes/spiders/: scraper_filmes.py
dags/filmes/send_email/: send_email.py
debug/: duckdb_debug.py
include/data/: data.csv  data.parquet
include/scripts/pyspark/: glue_job_calendarific.py
