[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
apache-airflow = "^2.8.1"
pandas = "^2.2.0"
apache-airflow-providers-postgres = "^5.10.0"
apache-airflow-providers-amazon = "^8.17.0"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
